external-crates/move/crates/move-compiler/tests/move_check/verification/specs_are_not_errors.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/verification/specs_are_not_errors.move:4:5
  │
4 │     spec foo {}
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/verification/specs_are_not_errors.move:7:7
  │
7 │     #[verify_only]
  │       ^^^^^^^^^^^ The 'verify_only' attribute has been deprecated along with specification blocks

error[E01002]: unexpected token
   ┌─ tests/move_check/verification/specs_are_not_errors.move:12:1
   │
12 │ spec a::m {
   │ ^^^^ Invalid code unit. Expected 'address' or 'module'. Got 'spec'
